tests/miniJava/neg/004394_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public String int [] java ( ) { return 0 ; } }
